--- a/static/css/main.css
+++ b/static/css/main.css
@@ -94,8 +94,8 @@ strong {
         border-color: var(--gray);
 }
 
-.dash-shadow {
-    box-shadow: .2rem .2rem .2rem var(--shadow);
+.card {
+    box-shadow: 0 .4rem .2rem -.2rem var(--shadow-dark);
 }
 
 .btn-secondary, .btn-secondary.disabled,.btn-secondary:disabled, .btn-outline-secondary, 
